--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
   "displayName": "misha-react-codempire",
   "expo": {
     "name": "misha-react-codempire",
-    "slug": "misha-react-codempire",
+    "slug": "pretty calculator",
     "version": "1.0.0",
     "assetBundlePatterns": [
       "**/*"
