--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "main": "index.js",
+  "main": "App/index.ts",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
@@ -8,24 +8,38 @@
     "test": "jest"
   },
   "dependencies": {
+    "-": "0.0.1",
+    "@codler/react-native-keyboard-aware-scroll-view": "^1.0.1",
     "expo": "~39.0.2",
+    "expo-cli": "^3.28.2",
+    "expo-font": "~8.3.0",
     "expo-splash-screen": "~0.6.2",
     "expo-status-bar": "~1.0.2",
     "expo-updates": "~0.3.2",
+    "global": "^4.4.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.3",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
+    "react-native-svg": "12.1.0",
     "react-native-unimodules": "~0.11.0",
-    "react-native-web": "~0.13.12"
+    "react-native-web": "~0.13.12",
+    "teaset": "^0.7.5"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
+    "@types/react": "^16.9.53",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-native": "^0.63.30",
     "babel-jest": "~25.2.6",
+    "concurrently": "^5.3.0",
     "jest": "~25.2.6",
-    "react-test-renderer": "~16.13.1"
+    "react-test-renderer": "~16.13.1",
+    "rimraf": "^3.0.2",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
   },
   "jest": {
     "preset": "react-native"
